@@ -30,6 +30,7 @@ The following bugs are resolved with this release:
   [33185] Fix double-free after allocation failure in regcomp
   [33234] Use TLS initial-exec model for __libc_tsd_CTYPE_* thread variables
   [33361] nss: Group merge does not react to ERANGE during merge
+  [33601] aarch64: Do not link conform tests with -Wl,-z,force-bti
 
 Version 2.40
 
